# anyforecast-models

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
deepts/: __init__.py  pipelines.py
deepts/compose/: __init__.py  _groupwise_column_transformer.py  _pandas_column_transformer.py
deepts/data/: __init__.py  _tsdataset.py
deepts/ensemble/: _bagging.py
deepts/models/: __init__.py  _pytorchforecasting.py  _seq2seq.py  base.py
deepts/preprocessing/: __init__.py  _data.py  _encoders.py  _transformer.py
deepts/utils/: data.py
examples/: mobile.py  stallion.py
src/anyforecast_models/: base.py  decorators.py
src/anyforecast_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/anyforecast_models/adapters/: __init__.py
src/anyforecast_models/data/: _slicedataset.py  _tsdataset.py
src/anyforecast_models/datasets/: __init__.py
src/anyforecast_models/ensemble/: _bagging.py
src/anyforecast_models/model_selection/: _split.py
src/anyforecast_models/models/: __init__.py
src/anyforecast_models/modules/: rnn.py
src/anyforecast_models/pipelines/: __init__.py  _preprocessor_estimator.py
src/anyforecast_models/preprocessing/: __init__.py  _data.py  _encoders.py  _make_preprocessor.py
src/anyforecast_models/utils/: checks.py
src/deepts/: base.py  decorators.py  exceptions.py
src/deepts/adapters/: __init__.py  _skorch.py
src/deepts/data/: _tsdataset.py
src/deepts/datasets/: __init__.py
src/deepts/ensemble/: _bagging.py
src/deepts/models/: __init__.py  _base.py  _output_trans.py  _pfnn.py  _seq2seq.py
src/deepts/pipelines/: __init__.py  _preprocessor_estimator.py
src/deepts/preprocessing/: __init__.py  _base.py  _checks.py  _data.py  _encoders.py  _make_preprocessor.py  _output.py
src/deepts/utils/: __init__.py  checks.py  data.py  pandas.py  rnn.py  validation.py
tests/modules/: test_embeddings.py  test_rnn.py
tests/preprocessing/: test_compose.py  test_data.py  test_encoders.py
(+34 files in other folders)
