[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepts"
version = "0.0.3"
description = "scikit-learn compatible library for state-of-the-art forecasting with neural networks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 80
target_version = ['py38', 'py39', 'py310']
preview = true
