[build-system]
requires = [
    "setuptools>=61.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.4",
    "skorch>=0.10.0",
    "pytorch-forecasting>=1.0",
    "torch>=2.0.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "anyforecast-models"
version = "0.0.12"
description = "scikit-learn compatible library for state-of-the-art forecasting with neural networks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 80
target_version = ['py38', 'py39', 'py310']
preview = true
